--- a/iOS/Kefi/Base.lproj/Main.storyboard
+++ b/iOS/Kefi/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vVz-uH-k2V">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="hRx-cM-0YU">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -46,7 +46,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vqQ-MC-gyS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1330" y="-644"/>
+            <point key="canvasLocation" x="1862" y="-652"/>
         </scene>
         <!--Place Detail View-->
         <scene sceneID="ufC-wZ-h7g">
@@ -394,7 +394,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Vqm-ny-vLQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="IkS-tb-46b" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1794" y="53"/>
+            <point key="canvasLocation" x="1862" y="53"/>
         </scene>
         <!--Submit Review Detail View-->
         <scene sceneID="bNm-Eu-nDW">
@@ -564,7 +564,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EvM-Cd-43n" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="Rj0-8q-Owb" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2226" y="53"/>
+            <point key="canvasLocation" x="2326" y="53"/>
         </scene>
         <!--Place List View - Kefi-->
         <scene sceneID="6Zz-Oo-Fvl">
@@ -687,7 +687,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Kefi" id="tp2-eR-Qw6">
-                        <barButtonItem key="leftBarButtonItem" title="Menu" id="oqg-Iq-bKW"/>
+                        <barButtonItem key="leftBarButtonItem" image="menu.png" id="oqg-Iq-bKW"/>
                         <barButtonItem key="rightBarButtonItem" systemItem="search" id="Kly-df-yze">
                             <connections>
                                 <segue destination="kaA-C8-Oth" kind="modal" id="Fgd-5R-9Hr"/>
@@ -696,6 +696,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="cancelSearchButton" destination="P34-La-VSr" id="fBI-x6-sWm"/>
+                        <outlet property="sidebarButton" destination="oqg-Iq-bKW" id="kAH-E0-lEd"/>
                         <outlet property="spinner" destination="Sae-Bi-fEX" id="0lL-BD-cGM"/>
                         <outlet property="spotlightPageControl" destination="zT6-Ga-8hR" id="Cuf-um-1cr"/>
                         <outlet property="spotlightView" destination="XmF-57-y88" id="rXs-FR-A99"/>
@@ -703,7 +704,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cUI-ba-g42" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="743" y="347"/>
+            <point key="canvasLocation" x="771" y="411"/>
         </scene>
         <!--Search View-->
         <scene sceneID="ycy-VW-CcL">
@@ -755,7 +756,57 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Tu-ew-r1z" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="GKO-KP-OHu" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1794" y="723"/>
+            <point key="canvasLocation" x="1862" y="735"/>
+        </scene>
+        <!--Reveal View Controller-->
+        <scene sceneID="1mr-Hw-78A">
+            <objects>
+                <viewController id="hRx-cM-0YU" customClass="SWRevealViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="KFj-Bu-Hz4"/>
+                        <viewControllerLayoutGuide type="bottom" id="qPc-et-dXR"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fDa-2v-hLM">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <segue destination="nXl-9p-YUh" kind="custom" identifier="sw_rear" customClass="SWRevealViewControllerSegue" id="WxK-lL-kqs"/>
+                        <segue destination="vVz-uH-k2V" kind="custom" identifier="sw_front" customClass="SWRevealViewControllerSegue" id="rjf-1c-Kxy"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lRP-8d-bAG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-213" y="59"/>
+        </scene>
+        <!--Sidebar View Controller-->
+        <scene sceneID="YcB-Qd-HpC">
+            <objects>
+                <tableViewController id="nXl-9p-YUh" customClass="SidebarViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="BMh-2x-R6X">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="Uwc-YA-1Ym">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Uwc-YA-1Ym" id="dt3-k7-xYQ">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="nXl-9p-YUh" id="uk7-eB-z9f"/>
+                            <outlet property="delegate" destination="nXl-9p-YUh" id="cEw-3O-KLl"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yt6-RR-G81" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="324" y="-397"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="fUp-YI-cYN">
@@ -773,7 +824,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ghF-x0-mIL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="259" y="347"/>
+            <point key="canvasLocation" x="324" y="411"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="wpx-Ox-voF">
@@ -791,7 +842,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NUN-bS-F1y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1330" y="723"/>
+            <point key="canvasLocation" x="1330" y="735"/>
         </scene>
     </scenes>
     <resources>
@@ -801,6 +852,7 @@
         <image name="eh.png" width="107" height="107"/>
         <image name="fullCircle.png" width="107" height="107"/>
         <image name="map.png" width="100" height="100"/>
+        <image name="menu.png" width="28" height="20"/>
         <image name="semiHappy.png" width="107" height="107"/>
         <image name="smallCircle.png" width="40" height="40"/>
         <image name="smallCircleFull.png" width="40" height="40"/>
